Re-added the max-width parameter for content to prevent layout overflow

--- a/src/css/devices-lab/root.css
+++ b/src/css/devices-lab/root.css
@@ -89,6 +89,7 @@ a {
 	padding-bottom: 1rem;
 	padding-top: 0.5rem;
 	width: 100%;
+	max-width: 1000px;
 	margin-left: auto;
 	margin-right: auto;
 }
